# stock-platform

./: .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  ALPHA_FACTORS_EXPLANATION.md  BACKTEST_DEBUG_REPORT.md  BACKTEST_NO_SIGNAL_ANALYSIS.md  BACKTEST_PARALLELIZATION.md  BACKTEST_SIGNAL_FIX_REPORT.md  CONTRIBUTING.md  DATA_PATH_MIGRATION_SUMMARY.md  DEPLOYMENT.md  DOCKER_DEPLOY.md  FRONTEND_ADAPTATION_SUMMARY.md  FRONTEND_REFACTORING_SUMMARY.md  GITIGNORE_CHECK_REPORT.md  MOBILE_OPTIMIZATION.md  MOBILE_STAGE2_DONE.md  MODEL_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  QLIB_METRICS_MIGRATION_ANALYSIS.md  QLIB_PRECOMPUTE_PHASE5_6_SUMMARY.md  README.md  SERVICES_REFACTORING_COMPLETION_REPORT.md  TASK_MANAGEMENT_GUIDE.md  deployment_test_report_20251229_231848.txt  docker-compose.dev.yml  docker-compose.yml  download_csi300_data.py  fill_backtest_details.py  fill_one_task.py  fix_portfolio_strategy.py  fix_stuck_tasks.py  manage_tasks.py  resolve_conflicts.py  start-prod.sh  start.sh  stop.sh  test_backtest_websocket_real.js  test_data_path.py  (+8 more)
backend/: .bandit  .env.example  .flake8  =3.4.0  BACKTEST_DATABASE_EXTENSION_README.md  Dockerfile  FINAL_REPORT 2.md  IMPLEMENTATION_SUMMARY.md  OPT1_FAILURE_ANALYSIS 2.md  OPT1_TRACKING.md  OPT2_PLAN 2.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PERF_OPTIMIZATION_LOG.md  PERF_TASK_REPORT.md  PHASE1_FINAL_SUMMARY.md  PHASE1_OPT1_FINAL_REPORT.md  PHASE1_OPT1_SUMMARY.md  PHASE1_PROGRESS.md  PHASE2_FINAL 2.md  PHASE2_PROGRESS 2.md  PHASE2_STATUS 2.md  PHASE3_FINAL_REPORT.md  PHASE3_OPTIMIZATION_PLAN 2.md  PHASE3_PROGRESS 2.md  PHASE3_PROGRESS_V2.md  PHASE4_FINAL_REPORT.md  PHASE4_MULTIPROCESS_RESULT 2.json  PHASE4_PROGRESS 2.md  PROGRESS 2.md  PROGRESS_PHASE2.md  QLIB_INSTALLATION.md  QLIB_INTEGRATION_SUMMARY.md  REFACTORING_REPORT_models.py.md  ROCM_SETUP.md  SIGNAL_FIX.md  SIGNAL_FIX_REPORT.md  SIGNAL_FIX_SUMMARY.md  TASK_COMPLETION_REPORT.md  (+53 more)
(+3547 files in other folders)
